.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deteccao-alagamento
  name: deteccao-alagamento
  namespace: deteccao-alagamento
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8501
  selector:
    app: deteccao-alagamento
