.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deteccao-alagamento-ingress
  namespace: deteccao-alagamento
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
        - alagamentos.dados.rio
      secretName: deteccao-alagamento-tls
  rules:
    - host: alagamentos.dados.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deteccao-alagamento
                port:
                  number: 80
